# lxqt-openssh-askpass

./: .gitignore  CHANGELOG  CMakeLists.txt  README  README.md
man/: lxqt-openssh-askpass.1
src/: main.cpp  mainwindow.cpp  mainwindow.h
translations/: lxqt-openssh-askpass.ts  lxqt-openssh-askpass_ar.ts  lxqt-openssh-askpass_arn.ts  lxqt-openssh-askpass_ast.ts  lxqt-openssh-askpass_bg.ts  lxqt-openssh-askpass_ca.ts  lxqt-openssh-askpass_cs.ts  lxqt-openssh-askpass_cy.ts  lxqt-openssh-askpass_da.ts  lxqt-openssh-askpass_de.ts  lxqt-openssh-askpass_el.ts  lxqt-openssh-askpass_en_GB.ts  lxqt-openssh-askpass_es.ts  lxqt-openssh-askpass_et.ts  lxqt-openssh-askpass_eu.ts  lxqt-openssh-askpass_fi.ts  lxqt-openssh-askpass_fr.ts  lxqt-openssh-askpass_gl.ts  lxqt-openssh-askpass_he.ts  lxqt-openssh-askpass_hr.ts  lxqt-openssh-askpass_hu.ts  lxqt-openssh-askpass_id.ts  lxqt-openssh-askpass_it.ts  lxqt-openssh-askpass_ja.ts  lxqt-openssh-askpass_ka.ts  lxqt-openssh-askpass_kab.ts  lxqt-openssh-askpass_kk.ts  lxqt-openssh-askpass_ko.ts  lxqt-openssh-askpass_lg.ts  lxqt-openssh-askpass_lt.ts  lxqt-openssh-askpass_nb_NO.ts  lxqt-openssh-askpass_nl.ts  lxqt-openssh-askpass_oc.ts  lxqt-openssh-askpass_pa.ts  lxqt-openssh-askpass_pl.ts  lxqt-openssh-askpass_pt.ts  lxqt-openssh-askpass_pt_BR.ts  lxqt-openssh-askpass_ru.ts  lxqt-openssh-askpass_si.ts  lxqt-openssh-askpass_sk_SK.ts  (+6 more)
